Added tournaments. Added Table agent that will be supposed to evolve the Game Optimal table

--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,17 @@ Size=550,680
 Collapsed=0
 
 [Window][Game]
-Pos=211,65
+Pos=321,107
 Size=823,607
+Collapsed=0
+
+[Window][Tournoi]
+Pos=126,41
+Size=681,785
+Collapsed=0
+
+[Window][Table Agent]
+Pos=1110,237
+Size=350,374
 Collapsed=0
 
