--- a/imgui.ini
+++ b/imgui.ini
@@ -13,18 +13,23 @@ Pos=242,3
 Size=550,680
 Collapsed=0
 
-[Window][Game]
-Pos=253,47
-Size=823,607
-Collapsed=0
-
 [Window][Tournoi]
-Pos=131,16
+Pos=438,103
 Size=1341,764
 Collapsed=0
 
 [Window][Table Agent]
-Pos=9,312
-Size=350,374
+Pos=152,162
+Size=637,544
 Collapsed=0
+
+[Window][Game]
+Pos=348,160
+Size=1081,736
+Collapsed=1
+
+[Window][Round robin]
+Pos=397,81
+Size=786,840
+Collapsed=1
 
